--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                         { name: 'הארץ', icon: '🇮🇱', link: 'https://www.haaretz.co.il/' },
                         { name: 'רוטר', icon: '🇮🇱', link: 'https://rotter.net/' },
                         { name: 'BBC News', icon: '🌍', link: 'https://www.bbc.com/' },
+                        { name: '2net', icon: '🇮🇱', link: 'https://www.2net.co.il/news.html' },
                     ]
                 },
                 {
@@ -55,6 +56,7 @@
                         { name: 'רדיו 103FM', icon: '🎙️', link: 'https://103fm.maariv.co.il/' },
                         { name: 'רשת ב', icon: '🎙️', link: 'https://www.kan.org.il/radio/player.aspx?stationid=3' },
                         { name: 'גלגלצ', icon: '🎙️', link: 'https://glgltz.co.il/' },
+                        { name: 'Radio-Head', icon: '🎙️', link: 'https://www.radio-head.co.il/' },
                     ]
                 },
                 {
@@ -67,6 +69,7 @@
                         { name: 'רשת 13', icon: '📺', link: 'https://13tv.co.il/live/' },
                         { name: 'ערוץ 14', icon: '📺', link: 'https://www.now14.co.il/' },
                         { name: 'i24NEWS', icon: '📺', link: 'https://www.i24news.tv/he' },
+                        { name: 'IsraMedia', icon: '📺', link: 'https://www.isramedia.net/channels.php' },
                     ]
                 },
                 {
@@ -79,6 +82,7 @@
                         { name: 'עושים היסטוריה', icon: '🎙️', link: 'https://www.kan.org.il/podcast/program.aspx/?progId=7' },
                         { name: 'סדר יום', icon: '🎙️', link: 'https://www.kan.org.il/podcast/program.aspx/?progId=2024' },
                         { name: 'גלובל', icon: '🎙️', link: 'https://www.kan.org.il/podcast/program.aspx/?progId=21' },
+                        { name: 'Podcastim', icon: '🎙️', link: 'https://podcastim.org.il/' },
                     ]
                 },
                 {
@@ -91,6 +95,7 @@
                         { name: 'YouTube Music', icon: '🎵', link: 'https://music.youtube.com/' },
                         { name: 'כאן תרבות', icon: '🎵', link: 'https://www.kan.org.il/radio/player.aspx?stationid=5' },
                         { name: 'eco99fm', icon: '🎵', link: 'https://eco99fm.maariv.co.il/' },
+                        { name: 'Classic FM', icon: '🎵', link: 'http://radio.2net.co.il/classicfm' },
                     ]
                 },
             ];
